<resources>
    <string name="app_name">SMD</string>
    <string name="sign_in_with_google">Sign in to continue</string>
    <string name="recent_notification">Recent Notification</string>
    <string name="enabled">Enabled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">SignOut</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="low_alert_time_in_seconds">Low Alert Time in Seconds</string>
    <string name="high_alert_time_in_seconds">High Alert Time in Seconds</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="developer_name">D. Venkata Bhagavan</string>
</resources>